<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/SecondaryActivity_rootLayout"
    tools:context=".SecondaryActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/secondary_activity"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true">
        </TextView>
        <Button
            android:id="@+id/SecondaryActivity_btn"
            android:layout_width="wrap_content"
            android:onClick="navigateBackClicked"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/go_back">
        </Button>
    </RelativeLayout>


</LinearLayout>